Extract PageMetaService from PageUpdateService to reduce dependency count in PageMetaService